# terminal-ui

./: .gitattributes  .gitignore  CHANGELOG.md  Depinstall.sh  README.md  builder.sh  electron-builder.linux.yml  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: build-binaries.yaml  native.yml
native/: Cargo.toml
native/app/: Cargo.toml  build.rs
native/app/assets/themes/: mono-light.toml  tron.toml
native/app/src/: lib.rs  main.rs  theme.rs
native/app/src/gfx/: mod.rs  renderer.rs  text.rs
native/app/src/gfx/shaders/: grid.wgsl
native/app/src/term/: emu.rs  mod.rs
native/app/src/ui/: mod.rs  panels.rs  theme_switcher.rs
native/ptycore/: Cargo.toml
native/ptycore/src/: lib.rs
native/ptycore/tests/: shell.rs
native/ptyd/: Cargo.toml
native/ptyd/src/: main.rs
scripts/: profile.sh
src/: _boot.js  _renderer.js  package.json  ui.html
src/assets/css/: boot_screen.css  mod_hackerTools.css  mod_netstat.css
src/assets/misc/: boot_log.txt
src/classes/: conninfo.class.js  cpuinfo.class.js  filesystem.class.js  hackerTools.class.js  locationGlobe.class.js  netstat.class.js  ramwatcher.class.js  sysinfo.class.js  terminal.class.js  toplist.class.js  updateChecker.class.js
