[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.10"
log = "0.4"
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
crossbeam-channel = "0.5"
ptycore = { path = "../ptycore" }

=======
alacritty_terminal = { version = "0.25", default-features = false, features = ["serde"] }
alacritty_config   = { version = "0.2.3-rc1", default-features = false }
swash = "0.1"
fontdb = "0.16"

thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
csscolorparser = "0.6"
sysinfo = "0.30"

wgpu_glyph = "0.21"
ab_glyph = "0.2"
fontdb = "0.15"


[build-dependencies]
