[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.10"
log = "0.4"
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
crossbeam-channel = "0.5"
ptycore = { path = "../ptycore" }
swash = "0.1"
fontdb = "0.16"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
csscolorparser = "0.6"
# Terminal emulation & text handling
vte = "0.13"
unicode-width = "0.1"
# System panels (use multithread to avoid blocking)
sysinfo = { version = "0.30", features = ["multithread"] }

[features]
default = []
