[package]
name = "ptycore"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.9.0"
which = "4"
anyhow = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Console"] }
