[package]
name = "ptyd"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
anyhow = "1"
which = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
